[fix]: add order by methods on swagger